--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <a href="https://codepen.io/adamggrover/full/yLvbNRR" target="_blank" id="product-landing-page" class="project-tile">
                         <img id="project-img" class="project-img"  src="/images/product-page.png" alt="">
                         <div class="overlay">
-                            <div class="text">Hello World</div>
+                            <div class="text">Product Landing Page</div>
                         </div>
                         
                     </a>
@@ -59,7 +59,7 @@
                     <a href="https://codepen.io/adamggrover/full/ZErRONW" target="_blank" id="technical-documentage-page" class="project-tile">
                         <img id="project-img" class="project-img" src="/images/technical-documentation.png" alt="">
                         <div class="overlay">
-                            <div class="text">Hello World</div>
+                            <div class="text">Technical Documentation Page</div>
                         </div>
                     </a>             
 
@@ -67,7 +67,7 @@
                     <a href="https://codepen.io/adamggrover/full/yLveMgB" target="_blank" id="survey-form" class="project-tile">
                         <img id="project-img" class="project-img"  src="/images/survey-form.png" alt="">
                         <div class="overlay">
-                            <div class="text">Hello World</div>
+                            <div class="text">Survey Form</div>
                         </div>
                     </a>                
 
@@ -75,7 +75,7 @@
                     <a href="https://codepen.io/adamggrover/full/PoQqJPZ" target="_blank" id="tribute-page" class="project-tile">
                         <img id="project-img" class="project-img"  src="/images/tribute-page.png" alt="">
                         <div class="overlay">
-                            <div class="text">Hello World</div>
+                            <div class="text">Tribute Page</div>
                         </div>
                     </a> 
 
